--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Weather Application</title>
-    <link rel="icon" href="https://img.pngio.com/weather-png-hd-weather-png-transparent-480_480.png"
-        type="image/x-icon">
+    <link rel="icon" href="https://img.pngio.com/weather-png-hd-weather-png-transparent-480_480.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -29,10 +28,13 @@
             <p id="windspeed"></p>
             <p id="humidity"></p>
         </div>
-        <input type="text">
-        <button onclick="getWeather()">Search</button>
+        <!-- <input type="text">
+        <button onclick="getWeather()">Search</button> -->
 
-
+        <form onsubmit="getWeather()">
+            <input type="text">
+            <input type="submit" value="Enter">
+        </form>
 
     </div>
 
