id given to submit button

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <form onsubmit="getWeather()">
             <input type="text">
-            <input type="submit" value="Enter">
+            <input id="submit-btn" type="submit" value="Enter">
         </form>
 
     </div>
